--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     padding: 16px 120px;
     background-color: 
     #FFFFFF;
-    max-width: 1536px;
+   width: 90%;
     
 
 }
@@ -27,23 +27,229 @@
     font-weight: semibold;
     color: #FFFFFF;
     cursor: pointer;
+    justify-content: center;
 }
 #banner{
     background-image: url(assets/hero-bg.png);
    background-color:;
-   width: ;
-   height: 550px;
+   width: 100%;
+   margin: 0 auto;
 
 }
 #banner .banner-container{
     padding: 70px 120px 134px;
     text-align: center;
+    text-align: center;
 }
 .banner-container .banner-btn{
     display: flex;
     gap: 20px;
+    text-align: center;
+    justify-content: center;
     
 }
-.banner-container .banner-heading{
+.banner-title{
+    font-size: 72px;
+    font-weight: bold;
+    margin: 16px auto;
+
+}
+.banner-title .white{
+
+    color: #FFFFFF;
     
+}
+.banner-title .blue{
+    color: #30B868;
+}
+.banner-heading{
+    padding: 8px 12px;
+    color: #30B868;
+    background-color: #FFFFFF;
+    width: 200px;
+    border-radius: 5px;
+    margin: 0
+    auto;
+}
+.banner-container p{
+    font-size: 18px;
+    color: #FFFFFF;
+    text-align: center;
+    width: 1300px;
+    justify-content: center;
+
+}
+.white-btn{
+   
+    background: none;
+    width:300px;
+    height: 60px;
+    font-size: 13px;
+     flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10;
+}
+
+.box{
+    display: flex;
+}
+#note{
+    text-align: center;
+    /*border: solid red;*/
+    padding: 0px 120px;
+   max-width: 1724px;
+   margin: 0 auto;
+}
+.section-heading h2{
+    font-size: 48px;
+    font-weight: bold;
+    color:#001931;
+    margin-bottom: 16px;
+    
+    
+    
+}
+.section-heading p{
+    font-size: 16px;
+    color: #627382;
+    margin-bottom: 44px;
+}
+.note-container{
+    display: flex;
+    justify-content: center;
+    padding:0px 120px;
+    align-items: center;
+}
+.card-title{
+   text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+
+}
+.card-info{
+    font-size: 16px;
+    color: #627382;
+    text-align: center;
+
+}
+.note-card{
+    padding: 24px;
+}
+.card-title i{
+    height: 60px;
+    width: 60px;
+    color: white;
+    background-color: #F95555;
+    border-radius: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+
+}
+#brain-section{
+    padding: 120px 120px 120px 120px;
+    width: 100%;
+     max-width: 1724px;    
+  margin: 0 auto;        
+ 
+
+}
+.brain-container{
+    width: 100%;
+    display: flex;
+    padding: ;
+    
+}
+.brain-text{
+    padding: 100px 0px 100px 60px;
+    width: 100% ;
+
+}
+.brain-text h5{
+    color: #469165;
+    font-size: 16px;
+
+}
+.brain-text h1{
+    font-size: 48px;
+    color:#001931 ;
+    font-weight: bold;
+}
+.brain-text p{
+    font-size: 16px;
+    color: #627382;
+}
+.brain-info{
+    list-style: none;
+    margin-top: 40px;
+    font-size: ;
+    font-weight: ;
+    color: ;
+
+}
+.icon{
+    font-size: 25px;
+    color: #001931;
+    margin-top: 20px;
+    margin-right: 10px;
+}
+
+
+body {
+  overflow-x: hidden;
+}
+.contact-container{
+    background-color: #F7F6F2;
+    margin: 0 auto;
+    text-align: center;
+    margin: 0 120px 120px 120px;
+    padding: 80px 40px;
+}
+.contact-container h2{
+    color: #001931;
+    font-size: 40px ;
+    font-weight: bold;
+    margin-bottom: 16px;
+}
+.contact-container p{
+    color: #627382;
+    font-size: 16px;
+
+}
+.footer-container{
+    background-color:#001931;
+    padding: 120px 120px 30px 120px;
+    
+}
+.footer-body{
+    display: flex;
+    justify-content: space-between;
+    
+}
+.contach-account{
+    display: flex;
+    list-style: none;
+    
+
+}
+
+.footer-end{
+    color: #FAFAFA;
+    text-align: center;
+    margin-top: 100px;
+    font-size: 18px;
+}
+.Social-media{
+    color: #FFFFFF;
+
+}
+.contach-account li a{
+    color: #FFFFFF;
+    margin-right: 20px;
 }
